added custom image filed

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>LITORAL</title>
+	<link rel="stylesheet" href="./css/font-awesome/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/App.css">
 </head>
 <body>
