--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>LITORAL</title>
 	<link rel="stylesheet" href="./css/font-awesome/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/colors.css">
 	<link rel="stylesheet" type="text/css" href="./css/App.css">
 </head>
 <body>
